Implemented pagination and updated README.md
