# src/api/todos/todo.controller.ts
@@ -16,8 +16,18 @@ export const getAllUserTodos = async (req: Request, res: Response) => {
   if (req.query.completed) {
     completed = req.query.completed === 'true'
   }
-  const todos = await TodoService.getAllUserTodos(req.params.userId, completed)
-  res.json(todos)
+
+  const skip = req.query.skip ? parseInt(req.query.skip as string) : 0
+  const take = req.query.take ? parseInt(req.query.take as string) : 10
+  const order = req.query.order ? req.query.order : 'asc'
+  const todos = await TodoService.getAllUserTodos(req.params.userId, completed, skip, take, order as 'asc' | 'desc')
+  const data = {
+    skip,
+    take,
+    total: todos.length,
+    results: todos,
+  }
+  res.json(data)
 }
 
 export const getUserTodoById = async (req: Request, res: Response) => {
@@ -41,4 +51,28 @@ export const updateUserTodoById = async (req: Request, res: Response) => {
 export const deleteUserTodoById = async (req: Request, res: Response) => {
   await TodoService.deleteUserTodoById(req.params.userId, req.params.todoId)
   res.status(204).json()
+}
+
+export const completeUserTodoById = async (req: Request, res: Response) => {
+  const todo = await TodoService.completeUserTodoById(
+    req.params.userId,
+    req.params.todoId
+  )
+  res.json(todo)
+}
+
+export const uncompleteUserTodoById = async (req: Request, res: Response) => {
+  const todo = await TodoService.uncompleteUserTodoById(
+    req.params.userId,
+    req.params.todoId
+  )
+  res.json(todo)
+}
+
+export const toggleUserTodoById = async (req: Request, res: Response) => {
+  const todo = await TodoService.toggleUserTodoById(
+    req.params.userId,
+    req.params.todoId
+  )
+  res.json(todo)
 }
